# agent-spec-vault

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
docs/: releasing.md
scripts/: install.sh
specv/: __init__.py  cli.py  vault.py
tests/: test_specv.py
