[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-spec-vault"
version = "0.1.0"
description = "A lightweight global Markdown spec and decision vault for AI coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "xixifast"}
]
keywords = ["ai-agents", "specs", "markdown", "codex", "knowledge-base"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Documentation",
  "Topic :: Utilities",
]

[project.scripts]
specv = "specv.cli:main"

[tool.setuptools]
packages = ["specv"]
