[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-spec-vault"
version = "0.1.2"
description = "A lightweight global Markdown spec and decision vault for AI coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "xixifast"}
]
keywords = ["ai-agents", "specs", "markdown", "codex", "knowledge-base"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Documentation",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/xixifast/agent-spec-vault"
Repository = "https://github.com/xixifast/agent-spec-vault"
Issues = "https://github.com/xixifast/agent-spec-vault/issues"

[project.scripts]
specv = "specv.cli:main"

[tool.setuptools]
packages = ["specv"]
